--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@flickmy/bic-logger",
+  "name": "@bicjs/bic-logger",
   "description": "Bic Logger",
   "version": "0.0.0-1",
   "author": {
     "name": "Ray Patterson",
     "email": "github.raypatterson@gmail.com"
   },
-  "bugs": "https://github.com/flickmy/bic-logger/issues",
+  "bugs": "https://github.com/bicjs/bic-logger/issues",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
@@ -19,25 +19,20 @@
     }
   ],
   "dependencies": {
+    "minilog": "2.1.0"
+  },
+  "devDependencies": {
     "blue-tape": "0.1.10",
     "bump-cli": "1.1.3",
     "cz-conventional-changelog": "1.1.4",
     "faucet": "0.0.1",
-    "fixpack": "2.2.0",
-    "minilog": "2.1.0"
-  },
-  "devDependencies": {
-    "blue-tape": "^0.1.10",
-    "bump-cli": "^1.1.3",
-    "cz-conventional-changelog": "^1.1.4",
-    "faucet": "0.0.1",
-    "fixpack": "^2.2.0"
+    "fixpack": "2.2.0"
   },
   "engines": {
     "node": "5.1.x",
     "npm": "3.3.x"
   },
-  "homepage": "https://github.com/flickmy/bic-logger#readme",
+  "homepage": "https://github.com/bicjs/bic-logger#readme",
   "keywords": [
     "bic",
     "console",
@@ -48,7 +43,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "repository": "github:flickmy/bic-logger",
+  "repository": "github:bicjs/bic-logger",
   "scripts": {
     "commit:pre": "git add -A && git commit -m 'Prerelease' && git push",
     "publish:pre": "npm publish --access=public",
